@@ -25,6 +25,7 @@ https://github.com/elastic/apm-aws-lambda/compare/v1.4.0...main[View commits]
 [float]
 ===== Bug fixes
 - Log a warning, instead of failing a Lambda function, if auth retrieval from AWS Secrets Manager fails. Reporting APM data will not work, but the Lambda function invocations will proceed. {lambda-pull}401[401]
+- Fix incorrect proxy transaction handling at shutdown due to not flushing the data before processing shutdown event. {lambda-pull}412[412].
 
 [float]
 ===== Features
